force-app/main/default/objects/User/fields/CaseSafe_User_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_User_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe User ID</label>
    <type>Text</type>
</CustomField>