force-app/main/default/objects/User/fields/MFA__c.field-meta.xml
<CustomField>
    <fullName>MFA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when MFA has been connected. Remove/Delete the field when the org is completely connected.</description>
    <label>MFA</label>
    <type>Checkbox</type>
</CustomField>