force-app/main/default/objects/User/fields/Salesperson_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Number__c</fullName>
    <label>Salesperson Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>