force-app/main/default/objects/User/fields/User_Branch__c.field-meta.xml
<CustomField>
    <fullName>User_Branch__c</fullName>
    <label>User Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTD_Branch</valueSetName>
    </valueSet>
</CustomField>