force-app/main/default/objects/User/listViews/A_D_Reps.listView-meta.xml
<ListView>
    <fullName>A_D_Reps</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>SFCONTENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>A &amp; D</value>
    </filters>
    <label>A&amp;D Reps</label>
</ListView>