force-app/main/default/objects/User/listViews/Users_Branches.listView-meta.xml
<ListView>
    <fullName>Users_Branches</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Users Branches</label>
    <sharedTo>
        <role>PresidentCEO</role>
        <role>VP_of_Sales_A_D</role>
    </sharedTo>
</ListView>